--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,17 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+
+@font-face {
+  font-family: 'light';
+  src: url(../fonts/light.ttf) format('truetype');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -83,6 +94,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: light;
 }
 
 body {
@@ -93,6 +105,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    padding: 5%;
 }
 
 a {
@@ -104,4 +117,9 @@ a {
   html {
     color-scheme: dark;
   }
+}
+p{
+  font-family: 'light';
+  text-align: left;
+  color: white;
 }
